--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -329,9 +329,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Let's analyze the problem carefully:\n",
+       "\n",
+       "- **Given**: 5 machines take 5 minutes to make 5 widgets.\n",
+       "  \n",
+       "  This implies each machine makes 1 widget in 5 minutes.\n",
+       "\n",
+       "Now, we need to find out how long 100 machines take to make 100 widgets.\n",
+       "\n",
+       "Since each machine takes 5 minutes to make 1 widget:\n",
+       "\n",
+       "- 100 machines working simultaneously will each make 1 widget in 5 minutes.\n",
+       "- So, 100 machines will make 100 widgets in the same 5 minutes.\n",
+       "\n",
+       "**Answer: 5 minutes**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown, display\n",
     "\n",
@@ -374,23 +400,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# First create the messages:\n",
     "\n",
-    "messages = [{\"role\": \"user\", \"content\": \"Something here\"}]\n",
+    "messages = [{\"role\": \"user\", \"content\": \"Pick a business area that might be worth exploring for an Agentic AI opportunity.\"}]\n",
     "\n",
     "# Then make the first call:\n",
     "\n",
-    "response =\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
     "\n",
     "# Then read the business idea:\n",
     "\n",
-    "business_idea = response.\n",
+    "business_idea = response.choices[0].message.content\n",
     "\n",
     "# And repeat! In the next message, include the business idea within the message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "One promising business area for an Agentic AI opportunity is **personalized healthcare management**.\n",
+       "\n",
+       "### Why this area?\n",
+       "\n",
+       "- **Complex, ongoing decision-making:** Managing health often requires continuous monitoring, adapting treatment plans, scheduling appointments, adjusting lifestyles, and coordinating with multiple providers — all tasks well-suited to an autonomous agent.\n",
+       "- **Data-rich environment:** Wearables, electronic health records, genetic data, and lifestyle tracking provide abundant data that an agent can analyze to make informed decisions.\n",
+       "- **High user impact:** Effective AI assistance can improve outcomes, reduce costs, and enhance quality of life by proactively managing health risks.\n",
+       "- **Regulatory and privacy considerations:** Agentic AI can be designed to operate within strict privacy and security frameworks, ensuring compliance and user trust.\n",
+       "\n",
+       "### Potential features of an Agentic AI in this space:\n",
+       "- Monitor patient vitals and detect anomalies.\n",
+       "- Schedule medical appointments and reminders.\n",
+       "- Suggest lifestyle adjustments based on real-time data.\n",
+       "- Coordinate medication management and adherence.\n",
+       "- Provide early warnings and facilitate communication with healthcare providers.\n",
+       "\n",
+       "Given the complexity and importance of personalized health, an Agentic AI that autonomously manages these tasks could transform healthcare delivery and patient empowerment."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(Markdown(business_idea))"
    ]
   },
   {
