--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,10 @@
     "\n",
     "response = openai.chat.completions.create(\n",
     "    model=\"gpt-4.1-mini\",\n",
-    "    messages=messages\n",
+    "    messages=messages,\n",
+    "    temperature=0.5,\n",
+    "    max_tokens=1000,\n",
+    "    \n",
     ")\n",
     "\n",
     "# Then read the business idea:\n",
@@ -463,6 +466,61 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "**Pain Points:**  \n",
+       "1. **Complexity of Lease Terms:** Difficult for shared owners to understand lease length, restrictions, and obligations.  \n",
+       "2. **Opaque Service Charges:** Lack of clarity on what service charges cover and unpredictable increases.  \n",
+       "3. **Communication Gaps:** Poor or delayed communication from Housing Associations regarding maintenance, charges, and rights.  \n",
+       "4. **Resale and Staircasing Confusion:** Uncertainty around processes, valuation, and timing for buying more shares or selling.  \n",
+       "5. **Legal and Financial Jargon:** Overwhelming legal and financial language deters owners from fully understanding their rights and responsibilities.  \n",
+       "\n",
+       "**Opportunities for Agentic AI:**  \n",
+       "1. **Automated Lease Explanation:** AI can parse and simplify lease documents into plain English tailored to the user’s situation.  \n",
+       "2. **Service Charge Breakdown:** Real-time, transparent breakdown and forecasting of service charges with alerts on unusual changes.  \n",
+       "3. **Proactive Communication Assistant:** AI-driven reminders and updates from Housing Associations, ensuring timely and clear communication.  \n",
+       "4. **Guided Staircasing & Resale Support:** Step-by-step AI guidance on valuation, paperwork, and timelines for share transactions.  \n",
+       "5. **Personalized Q&A & Legal Simplification:** Instant answers to user queries with simplified explanations of legal and financial terms."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "messages = [{\"role\":\"user\", \"content\": \"I want to build an Agent that helps you with Shared Ownership \\\n",
+    "    in the UK. Thinking about service charges, lease, comms to Housing Association\\\n",
+    "        what are the pain points and what are the opportunities for an Agentic AI solution?\\\n",
+    "            Constraints:\\\n",
+    "                - no fluff, straight to the point\\\n",
+    "                - 5 pain points and 5 opportunities\"}]\n",
+    "\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=messages,\n",
+    "    temperature=0.5,\n",
+    "    max_tokens=1000,\n",
+    ")\n",
+    "\n",
+    "display(Markdown(response.choices[0].message.content))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
